Server side fix for penguin item holding